copy changes & tarnsitions

--- a/src/index.html
+++ b/src/index.html
@@ -23,26 +23,26 @@
 				<img src="images/intro.jpg" alt="How does the average person begin their journey with cannabis?">
 			</div>
 			<div class="sunnyGraph__static--text">
-				<div class="sunnyGraph__static--title">How does the average person begin their journey with cannabis?</div>
+				<div class="sunnyGraph__static--title sunnyGraph__animIn sunnyGraph__fadeIn">How does the average person begin their journey with cannabis?</div>
 				<p>With a thousand questions!</p>
 				<p>Cannabis has emerged as a significant influence in the wellness world, but it’s easy to get overwhelmed by all of its forms and terminology.</p>
 			</div>
 		</div>
 		<div class="sunnyGraph__nav">
 			<img src="images/nav.jpg" alt="" class="sunnyGraph__nav--image">
-			<div class="sunnyGraph__nav--block">
+			<div class="sunnyGraph__nav--block sunnyGraph__animIn sunnyGraph__slideIn">
 				<div class="sunnyGraph__nav--block__title">But what <em>is</em> cannabis?</div>
 				<button class="sunnyGraph__nav--block__trigger" data-trigger="1">Click For Answer<img src="images/caret.svg" alt=""></button>
 			</div>
-			<div class="sunnyGraph__nav--block">
+			<div class="sunnyGraph__nav--block sunnyGraph__animIn sunnyGraph__slideIn">
 				<div class="sunnyGraph__nav--block__title">Why do I keep hearing about CBD and THC?</div>
 				<button class="sunnyGraph__nav--block__trigger" data-trigger="2">Click For Answer<img src="images/caret.svg" alt=""></button>
 			</div>
-			<div class="sunnyGraph__nav--block">
+			<div class="sunnyGraph__nav--block sunnyGraph__animIn sunnyGraph__slideIn">
 				<div class="sunnyGraph__nav--block__title">What kind of cannabis is right for me?</div>
 				<button class="sunnyGraph__nav--block__trigger" data-trigger="3">Click For Answer<img src="images/caret.svg" alt=""></button>
 			</div>
-			<div class="sunnyGraph__nav--block">
+			<div class="sunnyGraph__nav--block sunnyGraph__animIn sunnyGraph__slideIn">
 				<div class="sunnyGraph__nav--block__title">What’s the difference between indica and sativa?</div>
 				<button class="sunnyGraph__nav--block__trigger" data-trigger="4">Click For Answer<img src="images/caret.svg" alt=""></button>
 			</div>
@@ -53,7 +53,7 @@
 			</div>
 			<div class="sunnyGraph__static--text">
 				<p>Your cannabis journey is already well underway. The next step? Finding your nearest Sunnyside location. Your Wellness Advisor is ready to meet you and answer the rest of the questions you have about how cannabis can influence your wellness routine!</p>
-				<a href="https://www.sunnyside.shop/" target="_blank" class="button button--white-black">Find a Sunnyside Location</a>
+				<a href="https://www.sunnyside.shop/" target="_blank" class="button button--white-black sunnyGraph__altBtn">Find a Sunnyside<sup>&trade;</sup> Location</a>
 			</div>
 		</div>
 		<div class="sunnyGraph__sources">
@@ -72,7 +72,7 @@
 			<div class="sunnyGraph__popover--text">
 				<div class="sunnyGraph__popover--text__header">
 					<button class="sunnyGraph__popover--close" onclick="sunnyGraph__popover1.close();">Go Back To Questions<img src="images/caret-up.svg" alt=""></button>
-					<div class="sunnyGraph__popover--title">But what is cannabis?</div>
+					<div class="sunnyGraph__popover--title sunnyGraph__animIn sunnyGraph__fadeIn">But what is cannabis?</div>
 				</div>
 				<div class="sunnyGraph__popover--text__content">
 					<p>A Wellness Advisor can answer that for us! “Cannabis, also called marijuana, pot, weed, and other slang terms, is a unique plant that produces psychoactive, medicinal, and therapeutic effects.”</p>
@@ -94,7 +94,7 @@
 			<div class="sunnyGraph__popover--text">
 				<div class="sunnyGraph__popover--text__header">
 					<button class="sunnyGraph__popover--close" onclick="sunnyGraph__popover2.close();">Go Back To Questions<img src="images/caret-up.svg" alt=""></button>
-					<div class="sunnyGraph__popover--title">Why do I keep hearing about CBD and THC?</div>
+					<div class="sunnyGraph__popover--title sunnyGraph__animIn sunnyGraph__fadeIn">Why do I keep hearing about CBD and THC?</div>
 				</div>
 				<div class="sunnyGraph__popover--text__content">
 					<p>Ever wondered whether CBD or THC is right for you?</p>
@@ -113,11 +113,11 @@
 			<div class="sunnyGraph__popover--text">
 				<div class="sunnyGraph__popover--text__header">
 					<button class="sunnyGraph__popover--close" onclick="sunnyGraph__popover3.close();">Go Back To Questions<img src="images/caret-up.svg" alt=""></button>
-					<div class="sunnyGraph__popover--title">What’s the difference between indica and sativa?</div>
+					<div class="sunnyGraph__popover--title sunnyGraph__animIn sunnyGraph__fadeIn">What’s the difference between indica and sativa?</div>
 				</div>
 				<div class="sunnyGraph__popover--text__content">
 					<p>And you won’t go very far in the cannabis world without coming across the words, <em>indica</em> and <em>sativa</em>. What do they mean?</p>
-					<p>“Some kinds of cannabis feel uplifting, happy, and give a boost of mental energy. Other strains are more calming and relaxing. These two opposing experiences have led people to simplify cannabis into one of two different categories: indica and sativa. Indicas generally provide a deep relaxing “body high” that is helpful for managing pain and as a sleep aid, while sativas provide a “heady buzz” with uplifting cerebral energy. Hybrid cannabis strains are a mix of indica and sativa genetics that offer a balanced experience.”<sup>2</sup></p>
+					<p>“Some kinds of cannabis feel uplifting, happy, and give a boost of mental energy. Other strains are more calming and relaxing. These two opposing experiences have led people to simplify cannabis into one of two different categories: indica and sativa. Indicas generally provide a deep relaxing “body high” that is helpful for managing pain and as a sleep aid, while sativas provide a “heady buzz” with uplifting cerebral energy. Hybrid cannabis strains are a mix of indica and sativa genetics that offer a balanced experience.<sup>2</sup>”</p>
 				</div>
 			</div>
 		</div>
@@ -128,7 +128,7 @@
 			<div class="sunnyGraph__popover--text">
 				<div class="sunnyGraph__popover--text__header">
 					<button class="sunnyGraph__popover--close" onclick="sunnyGraph__popover4.close();">Go Back To Questions<img src="images/caret-up-white.svg" alt=""></button>
-					<div class="sunnyGraph__popover--title">What kind of cannabis is right for me?</div>
+					<div class="sunnyGraph__popover--title sunnyGraph__animIn sunnyGraph__fadeIn">What kind of cannabis is right for me?</div>
 				</div>
 				<div class="sunnyGraph__popover--text__content">
 					<p>Honestly, with all the different ways to consume cannabis out there, how could we travel this road alone?</p>
