--- a/deploy/article-wrap.html
+++ b/deploy/article-wrap.html
@@ -1813,7 +1813,7 @@
                 loading="lazy"
               >
             </div>
-            <h2>Which Nutrients Best Support Energy?</h2>
+            <h2>Which Nutrients Best Support&nbsp;Energy?</h2>
             <button class="multiVit__blocks-block__trigger" data-trigger="1">Get Answer</button>
           </div>
           <img
@@ -1838,7 +1838,7 @@
                 loading="lazy"
               >
             </div>
-            <h2>What Nutrients Should I Focus On For Immunity?</h2>
+            <h2>What Nutrients Should I&nbsp;Focus&nbsp;On&nbsp;For&nbsp;Immunity?</h2>
             <button class="multiVit__blocks-block__trigger" data-trigger="2">Get Answer</button>
           </div>
           <img
@@ -1863,7 +1863,7 @@
                 loading="lazy"
               >
             </div>
-            <h2>What Role Does Folic Acid Play In My Health?</h2>
+            <h2>What Role Does Folic Acid Play&nbsp;In&nbsp;My&nbsp;Health?</h2>
             <button class="multiVit__blocks-block__trigger" data-trigger="3">Get Answer</button>
           </div>
           <img
@@ -1888,7 +1888,7 @@
                 loading="lazy"
               >
             </div>
-            <h2>Why Should I Supplement Vitamin D If I Can Get It From The Sun?</h2>
+            <h2>Why Should I Supplement Vitamin&nbsp;D If I Can Get It From The&nbsp;Sun?</h2>
             <button class="multiVit__blocks-block__trigger" data-trigger="4">Get Answer</button>
           </div>
           <img
@@ -2051,7 +2051,7 @@
                 src="images/pop-4-1-md.jpg" 
                 loading="lazy"
               >
-              <p>Nowadays, factors like pollution, sunscreen, and staying indoors, can affect our body’s natural ability to make vitamin D from the sun.</p>
+              <p>Nowadays, factors like pollution, sunscreen, and staying indoors, can affect our body’s natural ability to make vitamin D from&nbsp;the&nbsp;sun.</p>
             </div>
             <div class="multiVit__popover__grid-block">
               <img
@@ -2073,7 +2073,7 @@
                 src="images/pop-4-3-md.jpg" 
                 loading="lazy"
               >
-              <p>Vitamin D also plays an essential role in the normal functioning of our immune system function.*</p>
+              <p>Vitamin D also plays an essential role in the normal functioning of our immune&nbsp;system&nbsp;function.*</p>
             </div>
           </div>
           <p>Because sunbathing isn’t always the best option, one serving of vitafusion™ MultiVites Gummy Vitamins provides a rich source (1,000 IU) of vitamin D. Packed with nutrients and flavor, staying on top of your essential nutrients has never been more convenient.</p>
