--- a/deploy/index.html
+++ b/deploy/index.html
@@ -281,7 +281,7 @@
 							src="images/pop-4-1-md.jpg" 
 							loading="lazy"
 						>
-						<p>Nowadays, factors like pollution, sunscreen, and staying indoors, can affect our body’s natural ability to make vitamin D from the sun.</p>
+						<p>Nowadays, factors like pollution, sunscreen, and staying indoors, can affect our body’s natural ability to make vitamin D from&nbsp;the&nbsp;sun.</p>
 					</div>
 					<div class="multiVit__popover__grid-block">
 						<img
@@ -303,7 +303,7 @@
 							src="images/pop-4-3-md.jpg" 
 							loading="lazy"
 						>
-						<p>Vitamin D also plays an essential role in the normal functioning of our immune system function.*</p>
+						<p>Vitamin D also plays an essential role in the normal functioning of our immune&nbsp;system&nbsp;function.*</p>
 					</div>
 				</div>
 				<p>Because sunbathing isn’t always the best option, one serving of vitafusion™ MultiVites Gummy Vitamins provides a rich source (1,000 IU) of vitamin D. Packed with nutrients and flavor, staying on top of your essential nutrients has never been more convenient.</p>
